<resources>
    <string name="app_name">Calculadora IMC</string>

    <!-- Home Screen -->
    <string name="app_home_person_weight_editText_title">Peso (kg)</string>
    <string name="app_home_person_weight_editText_title_error_value_empty">Insira seu peso</string>
    <string name="app_home_person_weight_editText_title_error_value_notAccepted">Peso não permitido</string>
    <string name="home_person_weight_editText_hint">Ex: 60</string>
    <string name="home_person_height_editText_title">Altura (m)</string>
    <string name="home_person_height_editText_error_value_empty">Insira sua altura</string>
    <string name="home_person_height_editText_error_value_notAccepted">Altura não permitida</string>
    <string name="home_person_height_editText_hint">Ex: 1.72</string>
    <string name="home_button_calculate">Calcular</string>
    <string name="home_button_calculate_unknown_error">Não foi possível calcular o seu IMC. Por favor, verifique os dados novamente</string>
    <string name="home_button_clear">Limpar</string>

    <string name="imc_underweight">Magreza</string>
    <string name="imc_healthy">Saudável</string>
    <string name="imc_overweight">Sobrepeso</string>
    <string name="imc_obesity_class_i">Obesidade Grau I</string>
    <string name="imc_obesity_class_ii">Obesidade Grau II</string>
    <string name="imc_obesity_class_iii">Obesidade Grau III</string>

    <string name="result_button_back">Voltar</string>
    <string name="result_imc_title">IMC</string>
    <string name="result_weight_editText_title">Seu Peso:\u0020</string>
    <string name="result_weight_editText_person">%.1f kg</string>
    <string name="result_height_editText_title">Sua Altura:\u0020</string>
    <string name="result_height_editText_person">%.1f m</string>
</resources>