<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity"
    android:orientation="vertical"
    style="@style/Background">

    <TextView
        android:id="@+id/textViewAppName"
        style="@style/Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="40dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewWeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/app_home_person_weight_editText_title"
        android:textSize="@dimen/home_person_editText_title_textSize"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextWeight"
        android:layout_width="match_parent"
        android:layout_height="@dimen/home_person_editText_title_layoutHeight"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="@string/home_person_weight_editText_hint"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/textViewWeightRule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:textColor="@color/red" />

    <TextView
        android:id="@+id/textViewHeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/home_person_height_editText_title"
        android:textSize="@dimen/home_person_editText_title_textSize"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextHeight"
        android:layout_width="match_parent"
        android:layout_height="@dimen/home_person_editText_title_layoutHeight"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="@string/home_person_height_editText_hint"
        android:inputType="numberDecimal" />

    <TextView
    android:id="@+id/textViewHeightRule"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:layout_marginBottom="16dp"
    android:textColor="@color/red" />

    <Button
        android:id="@+id/buttonCalculate"
        style="@style/Button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/home_person_button_layoutHeight"
        android:layout_margin="16dp"
        android:text="@string/home_button_calculate"
        android:textSize="@dimen/home_person_button_textSize"
        android:textStyle="bold" />

    <Button
        android:id="@+id/buttonClear"
        style="@style/Button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/home_person_button_layoutHeight"
        android:layout_margin="16dp"
        android:text="@string/home_button_clear"
        android:textSize="@dimen/home_person_button_textSize"
        android:textStyle="bold" />
</androidx.appcompat.widget.LinearLayoutCompat>